objects/L2I_Create_Connectivity__e.object
<CustomObject>
    <fields>
        <fullName>AircraftId__c</fullName>
        <label>AircraftId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderId__c</fullName>
        <label>OrderId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCategory__c</fullName>
        <description>It references to Product Category 2</description>
        <label>ProductCategory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Order Create Connectivity</label>
    <pluralLabel>Order Create Connectivity</pluralLabel>
</CustomObject>